--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -4,8 +4,7 @@
     padding: 0;
 }
 
-body { overflow-x:hidden; font-family: 'GmarketSansBold'; background-image: url(../img/topbg.jpg); background-repeat: no-repeat; background-size: 100%; }
-
+body { overflow-x:hidden; font-family: 'GmarketSansBold'; background-image: url(../img/topbg.jpg); background-repeat: no-repeat; background-size: 100%; margin: 0; padding: 0; }
 
 
 /* 레이아웃 */
@@ -29,6 +28,9 @@ body { overflow-x:hidden; font-family: 'GmarketSansBold'; background-image: url(
 }
 .right {
     text-align: right;
+}
+footer {
+    margin: 0; padding: 0;
 }
 
 
@@ -377,21 +379,19 @@ header .hem_menu {
 /* 어바웃 스토리 */
 .about_story {
     text-align: center;
-    height: 100vh;
+    height: 1300px;
     background-image: url(../img/about_bg.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
-    position: relative;
     margin-bottom: 100px;
 }
 
 .about_story .story_text {
     font-family: 'DM Sans';
     color: #fff;
-    position: absolute;
     width: 100%;
-    left: 50%; top: 75%;
-    transform: translate(-50%, -75%);
+    text-align: center;
+    padding-top: 35%;
 }
 
 .about_story .story_text p {
@@ -466,11 +466,11 @@ header .hem_menu {
 /* 프로젝트 */
 .projects {
     background-image: url(../img/project_bg.jpg);
-    background-size: 100%;
     background-repeat: no-repeat;
     height: 1000px;
     text-align: center;
     color: #fff;
+    margin-bottom: 100px;
 }
 .projects svg {
     display: inline-block;
@@ -481,15 +481,17 @@ header .hem_menu {
     font-family: 'DM Sans';
     font-size: 24px;
     line-height: 60px;
-    color: #D5DEE8;
+    color: #fff;
 }
 .projects span {
     font-family: 'DM Sans';
     font-size: 18px;
-    color: #D5DEE8;
+    color: #fff;
 }
 
 .project_frame {
+    width: 1400px;
+    margin: 0 auto;
     height: 200vh;
     text-align: center;
     position: relative;
@@ -558,8 +560,9 @@ header .hem_menu {
 .effects .effect_box {
     background-image: url(../img/effect_bg.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
-    height: 1000px;
+    background-size: cover;
+    width: 100%;
+    height: 130vh;
     text-align: center;
     color: #fff;
 }
@@ -577,7 +580,7 @@ header .hem_menu {
 }
 .effects .effect_frame {
     width: 100%;
-    height: 600vh;
+    height: 800vh;
     padding-top: 300px;
     background: linear-gradient(to top, #CAC6C1 0%, #1B262A 30%);
     position: relative;
@@ -600,25 +603,153 @@ header .hem_menu {
     margin-bottom: 200px;
 }
 .effects .effect_frame iframe {
-    width: 70%;
-    height: 650px;
+    width: 65%;
+    height: 80vh;
     vertical-align: bottom;
 }
 .effects .effect_frame img {
-    width: 70%;
+    width: 65%;
 
 }
 
 /* 애니메이션 */
-.anima_box {
+.animas {
+    text-align: center;
+}
+.animas .anima_box {
     background-image: url(../img/animation_bg.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 1000px;
-    text-align: center;
+    background-position: top;
+    height: 120vh;
     color: #fff;
 }
-.anima_box h2 {
+.animas .anima_box h2 {
     font-size: 180px;
-    padding-top: 350px;
+    padding-top: 30%;
+}
+.animas .anima_frame {
+    height: 1300px;
+}
+.animas .anima_frame p {
+    margin-top: 10vw;
+    font-size: 24px;
+}
+.animas .anima_frame .anima_show {
+   position: relative;
+   margin: 100px;
+}
+.animas .anima_show .show_center {
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    clip-path: circle(200px at center);
+    /* background: #000; */
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.animas .anima_show .show_center > div {
+    width: 1000px;
+    position: absolute;
+    left: 50%; top: -23%;
+    transform: translateX(-50%);
+}
+.animas .anima_show .show_left {
+    position: absolute;
+    left: 100px; top: 40px;
+}
+.animas .anima_show .show_left > div {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #000;
+    margin: 40px;
+    cursor: pointer;
+}
+
+/* 작은원 위치*/
+.animas .anima_show .show_left > div:nth-child(1) {
+    margin-left: 75px;
+    background: #2BE3FA;
+}
+.animas .anima_show .show_left > div:nth-child(2) {
+    background: #2AB17F;
+}
+.animas .anima_show .show_left > div:nth-child(3) {
+    margin-left: 75px;
+    background: #EBB8E6;
+}
+.animas .anima_show .show_right > div:nth-child(1) {
+    margin-left: -5px;
+    background: #9FBD59;
+}
+.animas .anima_show .show_right > div:nth-child(3) {
+    margin-left: -5px;
+}
+
+.animas .anima_show .show_right {
+    position: absolute;
+    right: 100px; top: 40px;
+}
+.animas .anima_show .show_right > div {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #000;
+    margin: 40px;
+    cursor: pointer;
+}
+
+/* 풋터 레퍼런스 */
+.references { margin-bottom: 300px; overflow: hidden; }
+.references h2 {
+    text-align: center;
+    font-size: 120px;
+    color: #0396A6;
+    margin-bottom: 100px;
+    background-image: url(../img/Vector.png);
+    background-repeat: no-repeat;
+    background-position: center bottom 15px;
+}
+.references h3 {
+    color: #0396A6;
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+.references .refer_box {
+    float: left;
+    margin-left: 150px;
+}
+.references .refer_box:last-child {
+    float: right;
+    margin-left: 0;
+    margin-right: 100px;
+}
+.references .refer_box ul {
+    margin-left: 12px;
+}
+.references .refer_box ul li {
+    padding: 5px 0;
+    list-style: initial;
+}
+
+.footer_img {
+    background-image: url(../img/footer_bg.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: top;
+    height: 1000px;
+    color: #fff;
+}
+.footer_bg span {
+    padding-top: 200px;
+    padding-left: 100px;
+    font-size: 20px;
+    display: inline-block;
+    margin-bottom: 100px;
+}
+.footer_bg p {
+    padding-left: 100px;
+    font-size: 70px;
 }
