--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -247,10 +247,10 @@ header .hem_menu {
 }
 .slider-inner {
     position: relative;
-    width: 4000px;
+    width: 13900px;
     overflow: hidden;
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(25, 1fr);
     gap: 5px;
     pointer-events: none;
 }
@@ -509,10 +509,9 @@ header .hem_menu {
     left: 50%; top: 0;
     transform: translateX(-50%);
 }
-.project_frame .site_view.show {
+/* .project_frame .site_view.show {
     display: none;
-    transition: .2;
-}
+} */
 
 .project_frame .site_box.left {
     max-width: 800px;
@@ -744,7 +743,7 @@ header .hem_menu {
     background-image: url(../img/footer_bg.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 1000px;
+    padding-bottom: 200px;
     background-position: top;
     box-sizing: border-box;
     color: #fff;
@@ -773,7 +772,7 @@ header .hem_menu {
     color: #fff;
 }
 .footer_bg img {
-    width: 900px;
+    width: 800px;
     position: absolute;
     right: 0; top: 35%;
     opacity: .5;
