--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -14,9 +14,9 @@ body { overflow-x:hidden; font-family: 'GmarketSansBold'; background-image: url(
 }
 .scroll {
     position: fixed;
-    right: 120px; top: 15px;
+    right: 30px; bottom: 30px;
     width: 50px; height: 50px;
-    background: rgba(0,0,0,0.3);
+    background: rgba(134, 190, 255, 0.541);
     text-align: center;
     line-height: 50px;
     color: #fff;
@@ -554,7 +554,7 @@ header .hem_menu {
 /* 코드 뷰 */
 .code_box {
     margin: 0 auto;
-    border: 1px solid #f2f2f2;
+    border: 2px solid #f2f2f2;
     border-radius: 10px;
     background: #fff;
     overflow: hidden;
@@ -594,13 +594,13 @@ header .hem_menu {
     background: #f8f8f8;
     display: block;
 }
-/* .code_box .view-cont>div {
+.code_box .view-cont>div {
     display: none;
 }
 
 .code_box .view-cont>div:nth-child(1) {
     display: block;
-} */
+}
 
 .project_frame .site_view1.show {
     display: none;
@@ -740,30 +740,13 @@ header .hem_menu {
     font-size: 24px;
 }
 .animas .anima_frame .anima_show {
-   position: relative;
    margin: 100px;
 }
-.animas .anima_show .show_center {
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    clip-path: circle(200px at center);
-    /* background: #000; */
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+.animas .anima_show .show_bt {
+    position: relative;
+    height: 500px;
 }
-.animas .anima_show .show_center > div {
-    width: 1000px;
-    position: absolute;
-    left: 50%; top: -23%;
-    transform: translateX(-50%);
-}
-.animas .anima_show .show_left {
-    position: absolute;
-    left: 100px; top: 40px;
-}
-.animas .anima_show .show_left > div {
+.animas .anima_show .show_bt > div {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -771,6 +754,46 @@ header .hem_menu {
     margin: 40px;
     cursor: pointer;
 }
+.animas .anima_show .show_bt > div.left {
+    position: absolute;
+    left: 10%; top: 10%;
+}
+.animas .anima_show .show_bt > div.right {
+    position: absolute;
+    background: #000;
+    right: 10%;
+    top: 10%;
+}
+.animas .anima_show .show_bt>div:nth-child(2) {
+    left: 5%; top: 30%;
+    background: #74F1FF;
+}
+.animas .anima_show .show_bt>div:nth-child(3) {
+    left: 5%;
+    top: 50%;
+    background: #74F1FF;
+}
+.animas .anima_show .show_bt>div:nth-child(4) {
+    left: 10%;
+    top: 70%;
+    background: #000;
+}
+.animas .anima_show .show_bt>div:nth-child(6) {
+    right: 5%;
+    top: 30%;
+    background: #fcca43;
+}
+.animas .anima_show .show_bt>div:nth-child(7) {
+    right: 5%;
+    top: 50%;
+    background: #fcca43;
+}
+.animas .anima_show .show_bt>div:nth-child(8) {
+    right: 10%;
+    top: 70%;
+    background: #fcca43;
+}
+
 .show_center.anima2 {
     display: none;
 }
@@ -780,53 +803,31 @@ header .hem_menu {
 .show_center.anima4 {
     display: none;
 }
-
-.anima_show .anima_img {
+.anima_show .anima_img { position: relative; }
+.anima_show .anima_img > div {
     width: 500px;
     height: 500px;
+    color: #fff;
     border-radius: 50%;
     background: #000;
-    margin: 0 auto;
-}
-
-
-/* 작은원 위치*/
-.animas .anima_show .show_left > div:nth-child(1) {
-    margin-left: 70%;
-    background: #2BE3FA;
-}
-.animas .anima_show .show_left > div:nth-child(2) {
-    background: #2AB17F;
-}
-.animas .anima_show .show_left>div:nth-child(3) {
-    background: #EBB8E6;
-}
-.animas .anima_show .show_left > div:nth-child(4) {
-    margin-left: 70%;
-}
-.animas .anima_show .show_right > div:nth-child(1) {
-    margin-left: -10%;
-    background: #9FBD59;
-}
-.animas .anima_show .show_right>div:nth-child(3) {
-
-}
-.animas .anima_show .show_right > div:nth-child(4) {
-    margin-left: -10%;
-}
-
-.animas .anima_show .show_right {
     position: absolute;
-    right: 100px; top: 40px;
+    left: 50%;
+    transform: translateX(-50%);
 }
-.animas .anima_show .show_right > div {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background: #000;
-    margin: 40px;
-    cursor: pointer;
+.anima_show .anima_img > div:nth-child(1) { z-index: 8;}
+.anima_show .anima_img > div:nth-child(2) { z-index: 7;}
+.anima_show .anima_img > div:nth-child(3) { z-index: 6;}
+.anima_show .anima_img > div:nth-child(4) { z-index: 5;}
+.anima_show .anima_img > div:nth-child(5) { z-index: 4;}
+.anima_show .anima_img > div:nth-child(6) { z-index: 3;}
+.anima_show .anima_img > div:nth-child(7) { z-index: 2;}
+.anima_show .anima_img > div:nth-child(8) { z-index: 1;}
+
+/* 클릭 이벤트 */
+.anima_show > div > div.active {
+    box-shadow: 0 0 0 5px #0396A6 inset;
 }
+
 
 /* 풋터 레퍼런스 */
 .references { margin-bottom: 300px; overflow: hidden; width: 1200px; margin: 0 auto; }
