--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -51,7 +51,7 @@ footer {
     border-radius: 50%;
     position: absolute;
     position: fixed;
-    z-index: 5;
+    z-index: 10;
     pointer-events: none;
     transition: transform .5s;
 }
@@ -814,19 +814,22 @@ header .hem_menu {
     right: 10%;
     top: 10%;
 }
+.animas .anima_show .show_bt>div:nth-child(1) {
+    background: #2BE3FA;
+}
 .animas .anima_show .show_bt>div:nth-child(2) {
     left: 5%; top: 30%;
-    background: #74F1FF;
+    background: #1EAC74;
 }
 .animas .anima_show .show_bt>div:nth-child(3) {
     left: 5%;
     top: 50%;
-    background: #74F1FF;
+    background: #F8C0EA;
 }
 .animas .anima_show .show_bt>div:nth-child(4) {
     left: 10%;
     top: 70%;
-    background: #000;
+    background: #C4C54D;
 }
 .animas .anima_show .show_bt>div:nth-child(6) {
     right: 5%;
@@ -853,7 +856,7 @@ header .hem_menu {
 .show_center.anima4 {
     display: none;
 }
-.anima_show .anima_img { position: relative; }
+.anima_show .anima_img { color: #fff; position: relative; }
 .anima_show .anima_img > div {
     width: 500px;
     height: 500px;
@@ -864,26 +867,39 @@ header .hem_menu {
     left: 50%;
     transform: translateX(-50%);
 }
-.anima_show .anima_img > div:nth-child(1) { z-index: 8;}
+.anima_show .anima_img > div:nth-child(1) { z-index: 8; background-image: url(../img/anima01.jpg); background-size: cover;}
 .anima_show .anima_img > div:nth-child(1) span { display: block;}
-.anima_show .anima_img > div:nth-child(2) { z-index: 7;}
-.anima_show .anima_img > div:nth-child(3) { z-index: 6;}
-.anima_show .anima_img > div:nth-child(4) { z-index: 5;}
-.anima_show .anima_img > div:nth-child(5) { z-index: 4;}
-.anima_show .anima_img > div:nth-child(6) { z-index: 3;}
-.anima_show .anima_img > div:nth-child(7) { z-index: 2;}
-.anima_show .anima_img > div:nth-child(8) { z-index: 1;}
+.anima_show .anima_img>div:nth-child(2) { display: none; z-index: 7; background-image: url(../img/anima02.jpg); background-size: cover; }
+.anima_show .anima_img > div:nth-child(3) { display: none; z-index: 6; background-image: url(../img/anima03.jpg); background-size: cover;}
+.anima_show .anima_img > div:nth-child(4) { display: none; z-index: 5;background-image: url(../img/anima04.jpg); background-size: cover;}
+.anima_show .anima_img > div:nth-child(5) { display: none; z-index: 4;}
+.anima_show .anima_img > div:nth-child(6) { display: none; z-index: 3;}
+.anima_show .anima_img > div:nth-child(7) { display: none; z-index: 2;}
+.anima_show .anima_img > div:nth-child(8) { display: none; z-index: 1;}
 
 .anima_show .anima_img > div span {
     position: absolute;
-    color: #000;
+    color: #fff;
     left: 50%; top: 110%;
     transform: translateX(-50%);
+    border-radius: 50px;
+    background: #0396A6;
+    padding: 15px 30px;
+    transition: padding .2s;
     font-size: 20px;
     display: none;
 }
+.anima_show .anima_img>div span:hover {
+    transition: padding .2s;
+    padding: 20px 40px;
+}
+.anima_show .anima_img>div span a {
+    color: #fff;
+    font-size: 16px;
+}
 /* 클릭 이벤트 */
 .anima_show > div > div.active {
+    transform: scale(1.3);
     box-shadow: 0 0 0 5px #0396A6 inset;
 }
 
