--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -884,6 +884,7 @@ header .hem_menu {
     transform: translateX(-50%);
     border-radius: 50px;
     background: #0396A6;
+    width: 250px;
     padding: 15px 30px;
     transition: padding .2s;
     font-size: 20px;
