--- a/portfolio/assets/css/style.css
+++ b/portfolio/assets/css/style.css
@@ -469,8 +469,9 @@ header .hem_menu {
     width: 500px;
     height: 500px;
     position: relative;
-    clip-path: circle(250px at center);
-    transform: perspective(600px) rotateX(0deg) rotateY(0deg);
+    /* clip-path: circle(250px at center);*/
+    perspective-origin: 500px;
+    transform: perspective(700px);
     transform-style: preserve-3d;
     will-change: transform;
     transition: all 0.2s;
@@ -746,52 +747,17 @@ header .hem_menu {
     border-style: none;
     padding: 10px 20px;
     border: 1px solid #fff;
-    border-radius: 5px;
+    border-radius: 50px;
     background: none;
     cursor: pointer;
     color: #fff;
     transition: all .3s;
 }
 
-/**/
-.project_frame .site_box.right button:hover,
-.project_frame .site_box.right button:hover a {
-    background: #fff;
-    color: #000;
-    transition: all .3s;
-}
-
-.project_frame .site_box.left button:nth-child(3) {
-    position: absolute;
-    left: 14%; top: 80%;
-    font-size: 60px;
-    border: 0;
-}
-.project_frame .site_box.left button:nth-child(3) span {
-    padding-left: 0px;
-    transition: all .6s;
-}
-.project_frame .site_box.left button:nth-child(3):hover span {
-    padding-left: 20px;
-    transition: all .6s;
-}
-.project_frame .site_box.left button:nth-child(3) a {
-    font-family: 'GmarketSansLight';
-}
-.project_frame .site_box.left button:nth-child(4) {
-    border: 0;
-    padding: 0;
-}
-/**/
-
 .project_frame .site_box button a {
     font-family: 'GmarketSansMedium';
     color: #fff;
 }
-/* .project_frame .site_box button a span {
-    font-family: 'ONE-Mobile-Regular';
-    color: #fff;
-} */
 
 
 /* 이펙트 */
